examples/type_system/failing/102_missing_colon_function_param.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

fn add(x Int, y: Int) -> Int {
    x + y
}
